2003-12-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_languages): Define %DEPBASE% conditionally
	on subdir-objects.  Define SUBDIROBJ.  Do not clean *_.c files
	here ...
	(lang_c_finish): ... do it here.
	(handle_single_transform_list): Do not output specific rules for
	subdir-objects files which are not renamed.  This should reduce
	the size of Makefiles with lots of subdirectory sources.
	* lib/depcomp: Simplify computation of dependency output, and use
	DEPDIR.
	* lib/am/depend2.am (%EXT%.o, %EXT%.obj, %EXT%.lo): Adjust call
	to depcomp.  Compute depbase on-the-fly in generic fastdep rules
	for subdir-objects.
	* tests/ansi9.test: Do not grep for an explicit rule that
	we no longer expect.  Really run $MAKE to make sure the chain
	of rules works.
	* tests/yacc5.test: Do not grep for an explicit rule that
	we no longer expect.  Adjust to use set -e.

2003-12-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (@common_files): Move configure, configure.ac, and
	configure.in ...
	(@common_sometimes): ... here so that these files do not appear
	twice in DIST_COMMON.

	* automake.in (maybe_push_required_file): Add $(srcdir) in front
	a required files outside the current directory or its subdirectories.
	* lib/am/distdir.am (distdir): Update comment.
	Report from Nicolas Joly.

2003-12-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (@copying): Do not repeat the version.
	(Top): Use @insertcopying.  Add a @detailmenu, this works around
	Emacs 21's inability to lookup indices in sub-nodes (reported
	by Kevin Ryde).
	(C++ Support, Assembly Support, Fortran 77 Support, Java Support,
	Support for Other Languages, Preprocessing Fortran 77, Compiling
	Fortran 77 Files, Mixing Fortran 77 With C and C++, How the Linker
	is Chosen): Add missing descriptions in menus.
	(Fortran 77 and Autoconf): Remove, this node was just saying "use
	Autoconf 2.53 or greater".

2003-12-26  Santiago Vila  <sanvila@unex.es>  (tiny change)
