@@ -6875,15 +6875,11 @@ sub generate_makefile ($$)
   handle_programs;
   handle_scripts;
 
-  # This must run first so that the ANSI2KNR definition is generated
-  # before it is used by the _.c rules.  We have to do this because
-  # a variable which is used in a dependency must be defined before
-  # the target, or else make won't properly see it.
+  # These must be run after all the sources are scanned.  They
+  # use variables defined by &handle_libraries, &handle_ltlibraries,
+  # or &handle_programs.
   handle_compile;
-  # This must be run after all the sources are scanned.
   handle_languages;
-
-  # We have to run this after dealing with all the programs.
   handle_libtool;
 
   # Variables used by distdir.am and tags.am.
