@@ -1,5 +1,7 @@
 2003-12-31  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (generate_makefile): Update misleading comment.
+
 	* automake.in (handle_languages): Define %DEPBASE% conditionally
 	on subdir-objects.  Define SUBDIROBJ.  Do not clean *_.c files
 	here ...
